create: header in index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="header-container">
+        <div class="header-top">
+          <a href="#" class="logo"
+            ><img
+              src="img\horisontal-logo.svg"
+              alt="Logo: Best Tour Plan"
+              class="logo__image"
+          /></a>
+
+          <form action="" class="search">
+            <input
+              type="text"
+              class="search__input"
+              placeholder="Search Location"
+            />
+            <button class="search__button">
+              <img src="img\search.svg" alt="Icon: search" />
+            </button>
+          </form>
+
+          <a class="user">
+            <img
+              src="img\user-avatar.jpg"
+              alt="avatar: Nathan"
+              class="user__avatar"
+            />
+            <span class="user__name">Nathan</span>
+          </a>
+        </div>
+        <nav class="headear-menu">
+          <a href="#" class="header-menu__link">All Deals</a
+          ><a href="#" class="header-menu__link">Hotels</a
+          ><a href="#" class="header-menu__link">Activities</a
+          ><a href="#" class="header-menu__link">Hotel Day Packages</a
+          ><a href="#" class="header-menu__link">Restaurants</a
+          ><a href="#" class="header-menu__link">Events</a
+          ><a href="#" class="header-menu__link">Rodrigues</a>
+        </nav>
+      </div>
+    </header>
+  </body>
 </html>
