--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@400;700&family=Nunito:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
@@ -37,7 +43,7 @@
             <span class="user__name">Nathan</span>
           </a>
         </div>
-        <nav class="headear-menu">
+        <nav class="header-menu">
           <a href="#" class="header-menu__link">All Deals</a
           ><a href="#" class="header-menu__link">Hotels</a
           ><a href="#" class="header-menu__link">Activities</a
