--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-container">
+      <div class="container">
         <div class="header-top">
           <a href="#" class="logo"
             ><img
@@ -24,7 +24,7 @@
               class="logo__image"
           /></a>
 
-          <form action="" class="search">
+          <form action="" class="search header__search">
             <input
               type="text"
               class="search__input"
@@ -35,7 +35,7 @@
             </button>
           </form>
 
-          <a class="user">
+          <a class="user" href="#">
             <img
               src="img\user-avatar.jpg"
               alt="avatar: Nathan"
