--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="navbar">
       <div class="container">
-        <div class="header-top">
+        <div class="navbar-top">
           <a href="#" class="logo"
             ><img
               src="img\horisontal-logo.svg"
@@ -24,7 +24,7 @@
               class="logo__image"
           /></a>
 
-          <form action="" class="search header__search">
+          <form action="" class="search navbar__search">
             <input
               type="text"
               class="search__input"
@@ -44,14 +44,14 @@
             <span class="user__name">Nathan</span>
           </a>
         </div>
-        <nav class="header-menu">
-          <a href="#" class="header-menu__link">All Deals</a
-          ><a href="#" class="header-menu__link">Hotels</a
-          ><a href="#" class="header-menu__link">Activities</a
-          ><a href="#" class="header-menu__link">Hotel Day Packages</a
-          ><a href="#" class="header-menu__link">Restaurants</a
-          ><a href="#" class="header-menu__link">Events</a
-          ><a href="#" class="header-menu__link">Rodrigues</a>
+        <nav class="navbar-menu">
+          <a href="#" class="navbar-menu__link">All Deals</a
+          ><a href="#" class="navbar-menu__link">Hotels</a
+          ><a href="#" class="navbar-menu__link">Activities</a
+          ><a href="#" class="navbar-menu__link">Hotel Day Packages</a
+          ><a href="#" class="navbar-menu__link">Restaurants</a
+          ><a href="#" class="navbar-menu__link">Events</a
+          ><a href="#" class="navbar-menu__link">Rodrigues</a>
         </nav>
       </div>
     </header>
