--- a/index.html
+++ b/index.html
@@ -44,15 +44,19 @@
             <span class="user__name">Nathan</span>
           </a>
         </div>
-        <nav class="navbar-menu">
-          <a href="#" class="navbar-menu__link">All Deals</a
-          ><a href="#" class="navbar-menu__link">Hotels</a
-          ><a href="#" class="navbar-menu__link">Activities</a
-          ><a href="#" class="navbar-menu__link">Hotel Day Packages</a
-          ><a href="#" class="navbar-menu__link">Restaurants</a
-          ><a href="#" class="navbar-menu__link">Events</a
-          ><a href="#" class="navbar-menu__link">Rodrigues</a>
-        </nav>
+      </div>
+      <div class="navbar-bottom">
+        <div class="container">
+          <nav class="navbar-menu">
+            <a href="#" class="navbar-menu__link">All Deals</a
+            ><a href="#" class="navbar-menu__link">Hotels</a
+            ><a href="#" class="navbar-menu__link">Activities</a
+            ><a href="#" class="navbar-menu__link">Hotel Day Packages</a
+            ><a href="#" class="navbar-menu__link">Restaurants</a
+            ><a href="#" class="navbar-menu__link">Events</a
+            ><a href="#" class="navbar-menu__link">Rodrigues</a>
+          </nav>
+        </div>
       </div>
     </header>
   </body>
