--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </button>
           </form>
 
-          <a class="user" href="#">
+          <a class="user navbar__user" href="#">
             <img
               src="img\user-avatar.jpg"
               alt="avatar: Nathan"
@@ -43,6 +43,11 @@
             />
             <span class="user__name">Nathan</span>
           </a>
+          <button class="menu-button navbar-top__menu-button">
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+            <span class="menu-button__line"></span>
+          </button>
         </div>
       </div>
       <div class="navbar-bottom">
